# Dict_on_ray

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
client/: CMakeLists.txt  Config.cpp  Config.h  ConfigComponent.cpp  ConfigComponent.h  Device.cpp  Device.h  DownLoadComponent.cpp  DownLoadComponent.h  JInterface.cpp  JInterface.h  LAF.cpp  LAF.h  ListThread.cpp  ListThread.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  ResultThread.cpp  ResultThread.h  SVGData.cpp  SVGData.h  SearchComponent.cpp  SearchComponent.h  SearchThread.cpp  SearchThread.h  Trans.cpp  Trans.h  UIModel.cpp  UIModel.h  WordList.cpp  WordList.h  WordListModel.cpp  WordListModel.h
client/JuceHeader/: JuceHeader.h
client/rc/: resource.h  source.rc
client/translations/: EN_US.h  TranslationFactory.h  Translations.h  ZH_CN.h
dictc/: CMakeLists.txt  diction.cpp  diction.h  getargs.c  getargs.h  main.cpp  prichar.h
pack/DEBIAN/: changelog  control  copyright  postinst
pack/etc/: dict-on-ray.conf
pack/usr/lib/systemd/system/: dict.service
server/: CMakeLists.txt  auto_tchar.h  auto_tmain.h  dic.c  dic.h  getopt.c  getopt.h  https-common.c  https-common.h  ini.c  ini.h  main.c
server/etc/: dict-on-ray.conf  test.conf
